--- a/ios/Podfile
+++ b/ios/Podfile
@@ -5,12 +5,11 @@ def shared_pods
   # Pods for COVIDSafePaths
   project 'COVIDSafePaths.xcodeproj'
 
-  pod 'Realm', :modular_headers => true
-  pod 'RealmSwift', :modular_headers => true
   pod 'FBLazyVector', :path => "../node_modules/react-native/Libraries/FBLazyVector"
   pod 'FBReactNativeSpec', :path => "../node_modules/react-native/Libraries/FBReactNativeSpec"
   pod 'RCTRequired', :path => "../node_modules/react-native/Libraries/RCTRequired"
   pod 'RCTTypeSafety', :path => "../node_modules/react-native/Libraries/TypeSafety"
+
   pod 'React', :path => '../node_modules/react-native/'
   pod 'React-Core', :path => '../node_modules/react-native/'
   pod 'React-CoreModules', :path => '../node_modules/react-native/React/CoreModules'
@@ -41,8 +40,6 @@ def shared_pods
   pod 'RNReanimated', :path => '../node_modules/react-native-reanimated'
 
   permissions_path = '../node_modules/react-native-permissions/ios'
-  pod 'Permission-LocationWhenInUse', :path => "#{permissions_path}/LocationWhenInUse.podspec"
-  pod 'Permission-LocationAlways', :path => "#{permissions_path}/LocationAlways.podspec"
   pod 'Permission-Notifications', :path => "#{permissions_path}/Notifications.podspec"
 
   use_native_modules!
@@ -50,6 +47,10 @@ end
 
 target 'GPS' do
   shared_pods
+  pod 'Realm', :modular_headers => true
+  pod 'RealmSwift', :modular_headers => true
+  # permissions_path = '../node_modules/react-native-permissions/ios'
+  # pod 'Permission-LocationAlways', :path => "#{permissions_path}/LocationAlways.podspec"
 end
 
 target 'BTE' do
